src/static/stylesheets/listing.scss
@import "~elv-components-js/src/stylesheets/mixins";

.listing {
  height: 100%;
  width: 100%;

  .loading {
    align-items: center;
    display: flex;
    justify-content: center;
    margin-top: 100px;
    width: 100%;
  }

  .listing-actions {
    display: flex;
    height: 50px;
    justify-content: space-between;
    width: 100%;

    .controls {
      align-items: center;
      display: flex;
      flex-grow: 1;
      flex-shrink: 1;
      height: 35px;
      margin-right: $elv-spacing-xs;

      &.right-controls {
        justify-content: flex-end;
      }

      input {
        max-width: 250px;
      }

      select {
        max-width: 200px;
      }

      input,
      select {
        border: 1px solid $elv-color-lightgray;
        flex-basis: 100px;
        flex-grow: 1;
        flex-shrink: 1;
        height: 100%;
        min-width: 0;
        width: auto;
      }
    }

    .page-controls {
      align-items: center;
      display: flex;
      height: 100%;

      &:last-child {
        border-right: 1px solid $elv-color-lightgray;
      }

      li {
        border: 1px solid $elv-color-lightgray;
        border-right: 0;
        height: 100%;

        .page-button {
          align-items: center;
          background: transparent;
          border: 0;
          cursor: pointer;
          display: flex;
          font-size: 12px;
          height: 100%;
          justify-content: center;
          margin: 0;
          min-width: 25px;

          &:hover {
            background: $elv-color-lightgray;
          }

          &:active {
            background: $elv-color-lightergray;
          }

          &:disabled {
            color: $elv-color-black;
            font-weight: bold;

            &:hover,
            &:active {
              background: transparent;
              cursor: auto;
            }

            &.selected {
              background: $elv-color-lightestgray;
            }
          }
        }

        .text-button {
          &:disabled {
            color: $elv-color-mediumgray;
            font-weight: normal;

            &:hover,
            &:active {
              background: transparent;
              cursor: auto;
            }
          }
        }
      }
    }

    .listing-action {
      margin: 0 $elv-spacing-xxs;
      padding: $elv-spacing-xxs;

      i {
        height: 25px;
        width: 25px;
      }
    }

    .loading-action {
      width: 41px;
    }

    .filter {
      font-size: 16px;
      height: 30px;
      margin: 0 $elv-spacing-xs;
      padding: 0 $elv-spacing-xs;
    }
  }

  // Grid view

  .grid-listing {
    display: flex;
    flex-wrap: wrap;
    margin-top: $elv-spacing-m;
  }

  .grid-listing-element {
    color: $elv-color-text-light;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    flex-shrink: 1;
    height: 225px;
    justify-content: space-between;
    max-height: 225px;
    max-width: 225px;
    padding: $elv-spacing-s $elv-spacing-xs;
    width: 40%;

    &:hover {
      background: $elv-color-lightergray;
    }

    .icon-container {
      $image-size: 100px;
      @include elv-cropped-image($image-size, $image-size, 0%, $image-size, $image-size);
    }

    .title {
      color: $elv-color-text-black;
      font-size: 18px;
    }

    .description {
      font-size: 14px;
      height: 2.5em;
      margin-bottom: $elv-spacing-xs;
      max-height: 80px;
      overflow: hidden;
    }

    .title,
    .status {
      @include elv-ellipsis;
    }

    .title,
    .description,
    .status {
      text-align: center;
    }
  }

  // Table view

  table {
    border-collapse: collapse;
    max-width: 100%;
    table-layout: fixed;
    width: 100%;

    * {
      border: 0;
    }
  }

  thead {
    tr {
      height: 30px;

      th {
        margin: 0;
        padding: 0;

        &.icon-header {
          width: 95px;
        }

        &.title-header {
          width: 30%;
        }

        &.status-header {
          width: 160px;
        }
      }
    }
  }

  tbody {
    tr {
      height: 80px;

      &:hover {
        background: $elv-color-lightergray;
        cursor: pointer;
      }

      td {
        @include elv-ellipsis;
        color: $elv-color-text-light;
        margin: 0;
        max-height: 100px;
        padding: 0 0 0 $elv-spacing-s;
        word-wrap: break-word;

        &.icon-cell {
          padding: $elv-spacing-xs 0;
        }

        &.title-cell {
          color: $elv-color-text-black;
          font-size: 18px;
        }

        &.description-cell {
          .description-text {
            height: auto;
            max-height: 60px;
            overflow-x: visible;
            overflow-y: hidden;
            white-space: normal;
          }
        }

        &.status-cell {
          font-size: 14px;
        }

        .icon-container {
          $image-size: 70px;
          @include elv-cropped-image($image-size, $image-size, 0%, $image-size, $image-size);
        }

        a {
          display: block;
          height: 100%;
          width: 100%;
        }
      }
    }
  }
}

